--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
     "axios": "^0.24.0",
     "base-64": "^1.0.0",
     "bootstrap": "^5.1.3",
+    "i": "^0.3.7",
     "material-ui-search-bar": "^1.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "npm": "^8.1.4",
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
     "react-load-script": "0.0.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "startbootstrap-shop-homepage": "^5.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
