--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "npm": "^8.1.4",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
+    "react-images-upload": "^1.2.8",
     "react-load-script": "0.0.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
